# wgpu-compute-tests

./: Cargo.toml
src/: compute_shader.wgsl  main.rs
