[package]
name = "wgpu-compute-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1.20", features = ["derive"] }
env_logger = "0.11.5"
flume = "0.11.1"
log = "0.4"
png = "0.17.14"
pollster = "0.4.0"
wgpu = "23.0.1"
anyhow = "1.0" # NEW!
rand = "0.8.5"
futures-intrusive = "0.5.0"
serde_json = "1.0.133"
sysinfo = "0.33.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
